--- a/cliponpage.html
+++ b/cliponpage.html
@@ -57,7 +57,7 @@
   </div>
 
   <script>
-    const SHEET_URL = 'YOUR_WEB_APP_URL'; // <-- Paste your deployed web app URL here
+    const SHEET_URL = https://script.google.com/macros/s/AKfycbz1naZENaigQRS__6Hjqj1X2VvB1ELTglgWrIoXRdrU2p5MTS4huQueH9JmdUJCcCbglQ/exec; // <-- Paste your deployed web app URL here
 
     function saveToSheet() {
       const clipText = document.getElementById('clipInput').value.trim();
