--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <section class="hero">
         <h1>Welcome to Bidrah</h1>
         <p>Your hub for cutting-edge tech vlogs & tools</p>
-        <a href="redlit.html" class="cta">Redlit</a>
+        <a href="particlepage.html" class="cta">Particle demo</a>
 <a href="cliponpage.html" class="cta">Clipon</a>
         <a href="moodquiz.html" class="cta">Mood Quiz</a>
     </section>
