--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
         <p>Your hub for cutting-edge tech vlogs & tools</p>
         <a href="striptease.html" class="cta">StripTease</a>
 <a href="cliponpage.html" class="cta">Clipon</a>
+<a href="redlit.html" class="cta">Redlit</a>
     </section>
 
     <!-- Content Section -->
